--- a/style.css
+++ b/style.css
@@ -1,4 +1,24 @@
-h1.bumper {
+body {
     font-family: Arial, Helvetica, sans-serif;
+}
+
+h1.bumper {
+    margin-top: 10;
     text-align: center;
+}
+
+body.dark-mode {
+    background-color: black;
+    color: white;
+}
+
+button {
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+button.dark-mode {
+    background-color: #222;
+    color: white;
+    border-color: white;
 }
